--- a/install
+++ b/install
@@ -1,15 +1,16 @@
+#!/bin/bash
+
 apt update
 apt install -y python3 runc tmux
-mkdir /root/Kunker
-cp -r ./* /root/Kunker
-chmod +x /root/Kunker/kunker
-ln -s /root/Kunker/kunker /usr/bin/kunker
+mkdir /usr/local/share/kunker
+cp -r ./* /usr/local/share/kunker
+ln -s /usr/local/share/kunker/kunker /usr/local/bin/kunker
 cat << EOF > /etc/systemd/system/kunker.service
 [Unit]
 Description=Kunker setup
 
 [Service]
-ExecStart=python3 /root/Kunker/setup.py
+ExecStart=python3 /usr/local/share/kunker/setup.py
 
 [Install]
 WantedBy=multi-user.target
@@ -18,4 +19,4 @@ systemctl enable kunker
 ip link add name kunker-br0 type bridge
 ip addr add 172.10.1.1/16 dev kunker-br0
 ip link set dev kunker-br0 up
-python3 /root/Kunker/setup.py
+python3 /usr/local/share/kunker/setup.py
